log

Wed 13 Mar 2024 09:17:35 PM UTC: 
 exercises.c | 50 ++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 44 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:5: error: expected expression before ‘}’ token
   18 |     }
      |     ^
exercises.c: In function ‘reverseArray’:
exercises.c:29:10: error: unused variable ‘j’ [-Werror=unused-variable]
   29 |   int i, j;
      |          ^
exercises.c:29:7: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   int i, j;
      |       ^
exercises.c: At top level:
exercises.c:40:1: error: unknown type name ‘bool’
   40 | bool esPar(int num){
      | ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c: In function ‘esPar’:
exercises.c:42:12: error: ‘true’ undeclared (first use in this function)
   42 |     return true;
      |            ^~~~
exercises.c:42:12: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:42:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:44:10: error: ‘false’ undeclared (first use in this function)
   44 |   return false;
      |          ^~~~~
exercises.c:44:10: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c: In function ‘checkSorted’:
exercises.c:68:7: error: ‘i’ undeclared (first use in this function)
   68 |   for(i=0; i < size; i ++) //VERIFICADOR ASCENDENTE
      |       ^
exercises.c: In function ‘esPar’:
exercises.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1995e41
Wed 13 Mar 2024 09:19:23 PM UTC: 
 exercises.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:5: error: expected expression before ‘}’ token
   18 |     }
      |     ^
exercises.c: In function ‘reverseArray’:
exercises.c:29:10: error: unused variable ‘j’ [-Werror=unused-variable]
   29 |   int i, j;
      |          ^
exercises.c:29:7: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   int i, j;
      |       ^
exercises.c: In function ‘checkSorted’:
exercises.c:62:7: error: ‘i’ undeclared (first use in this function)
   62 |   for(i=0; i < size; i ++) //VERIFICADOR ASCENDENTE
      |       ^
exercises.c:62:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9acbfd5
Wed 13 Mar 2024 09:20:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:5: error: expected expression before ‘}’ token
   18 |     }
      |     ^
exercises.c: In function ‘reverseArray’:
exercises.c:29:10: error: unused variable ‘j’ [-Werror=unused-variable]
   29 |   int i, j;
      |          ^
exercises.c:29:7: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   int i, j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
8ace66c
Sun 17 Mar 2024 12:37:34 AM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:10: error: unused variable ‘j’ [-Werror=unused-variable]
   29 |   int i, j;
      |          ^
exercises.c:29:7: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   int i, j;
      |       ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:43:22: error: expected expression before ‘)’ token
   43 |   for(int i = 0; i < )
      |                      ^
exercises.c:44:16: error: control reaches end of non-void function [-Werror=return-type]
   44 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
6053046
